Tue Dec 06 14:09:16 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* python/pythontest2.py: Use "if x is not None:" rather than "if x !=
	  None:" (PEP 8).

Tue Dec 06 14:06:31 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* python/Makefile.am: Add module_top.py to tarballs.

Tue Dec 06 14:01:26 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* python/Makefile.am,python/module_top.py: Add a module docstring
	  (fixes #573).

Tue Dec 06 13:42:56 GMT 2011  Olly Betts <olly@survex.com>

	* Backport changes from trunk:
	* python/doxy2swig.py,python/pythontest2.py,python/testsuite2.py:
	  Remove trailing whitespace.
	* python/pythontest2.py,python/testsuite2.py: Move the check for
	  leaked objects into the testsuite harness so all tests get checked,
	  not just the two which are regression tests for leaks in older
	  versions.  This also gives us a single place to disable it if it
	  should prove problematic in alternative Python implementations.
	* python/pythontest2.py: In test_matchingterms_iter, run the code
	  we're testing for leaks twice, and only check for leaks the second
	  time to avoid falsely reporting a leak when some cached value gets
	  initialised under Python 2.5.

Fri Nov 11 18:53:14 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* php/smoketest.php: Add regression test for recently fixed SWIG bug
	  which caused "return $r;" to be generated in some cases when $r
	  wasn't set.

Wed Aug 10 06:11:13 GMT 2011  Olly Betts <olly@survex.com>

	* NEWS: Finalise 1.2.7.

Tue Aug 09 08:53:03 GMT 2011  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Initial update for 1.2.7.

Mon Aug 08 04:13:26 GMT 2011  Olly Betts <olly@survex.com>

	* java-swig/SmokeTest.java: Add test that string passing is zero byte
	  safe.

Mon Aug 08 04:06:20 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk: